force-app/main/default/objects/Registration_Line_Item__c/Registration_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Line item on a registration... represents an enrollment request for the registration&apos;s account in a section.</description>
    <label>Registration Line Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registration Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>