force-app/main/default/objects/Registration_Line_Item__c/fields/Course_Offering__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The section that this line item is for.</description>
    <inlineHelpText>The section that this line item is for.</inlineHelpText>
    <label>Section</label>
    <referenceTo>hed__Course_Offering__c</referenceTo>
    <relationshipLabel>Registration Line Items</relationshipLabel>
    <relationshipName>Registration_Line_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>