force-app/main/default/objects/Registration_Line_Item__c/fields/Enrollment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Reference__c</fullName>
    <description>An External Id to match with an enrollment e.g. 2024FA-AGBB-2010-100-12345 [term-subj-coursenum-sectionnum]</description>
    <externalId>true</externalId>
    <inlineHelpText>An External Id to match with an enrollment e.g. 2024FA-AGBB-2010-100-12345 [term-subj-coursenum-sectionnum]</inlineHelpText>
    <label>Enrollment Reference</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>