force-app/main/default/objects/Registration_Line_Item__c/fields/Registration_Line_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Registration_Line_Item_Id__c</fullName>
    <description>Line item id from Opus.</description>
    <externalId>true</externalId>
    <inlineHelpText>Line item id from Opus.</inlineHelpText>
    <label>Registration Line Item Id</label>
    <precision>12</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>